created initial js to set characters but the onclick events need to be condensed into one function

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,11 @@ body {
 }
 
 /* Battle Dome */
+
 #battledome {
+    display: none;
+}
+#arena {
     background-color: rgba(187, 200, 216, 0.8);
     border: 10px solid #a78a98;
     border-radius: 10px;
